implement and improve weather fiter date time
